terraform/network.tf
locals {
  subnet_prefix = "SNET-CDT-PUB-VIP-CALITP-${local.env_letter}"
  network_subnets = {
    "APP" = {
      prefix            = ["10.0.0.0/26"] # 64 addresses - 10.0.0.0 to 10.0.0.63
      delegation        = "Microsoft.Web/serverFarms"
      actions           = ["Microsoft.Network/virtualNetworks/subnets/action"]
      service_endpoints = null
    }
    "DB" = {
      prefix            = ["10.0.0.64/26"] # 64 addresses - 10.0.0.64 to 10.0.0.127
      delegation        = "Microsoft.DBforPostgreSQL/flexibleServers"
      actions           = ["Microsoft.Network/virtualNetworks/subnets/join/action"]
      service_endpoints = ["Microsoft.Storage"]
    }
    "CA" = {
      prefix            = ["10.0.0.128/26"] # 64 addresses - 10.0.0.128 to 10.0.0.191
      delegation        = "Microsoft.App/environments"
      actions           = ["Microsoft.Network/virtualNetworks/subnets/join/action"]
      service_endpoints = null
    }
  }
}

# The primary VNet (per environment)
resource "azurerm_virtual_network" "main" {
  name                = "VNET-CDT-PUB-VIP-CALITP-${local.env_letter}-001"
  location            = data.azurerm_resource_group.main.location
  resource_group_name = data.azurerm_resource_group.main.name
  address_space       = ["10.0.0.0/24"] # 256 addresses - 10.0.0.0 to 10.0.0.255

  lifecycle {
    ignore_changes = [tags]
  }
}

# The subnets for the primary VNet
resource "azurerm_subnet" "main" {
  # This for_each loop creates a subnet for each item in the network_subnets map.
  for_each = local.network_subnets

  name                 = "${local.subnet_prefix}-${each.key}"
  virtual_network_name = azurerm_virtual_network.main.name
  resource_group_name  = data.azurerm_resource_group.main.name
  address_prefixes     = each.value.prefix

  dynamic "service_endpoint" {
    for_each = coalesce(each.value.service_endpoints, [])
    content {
      service = service_endpoint.value
    }
  }

  delegation {
    name = "delegation-${lower(each.key)}"
    service_delegation {
      name    = each.value.delegation
      actions = each.value.actions
    }
  }

  default_outbound_access_enabled = false
}

# DNS Zone and private link required for database's Private Access
resource "azurerm_private_dns_zone" "db" {
  name                = "privatelink.postgres.database.azure.com"
  resource_group_name = data.azurerm_resource_group.main.name

  lifecycle {
    ignore_changes = [tags]
  }
}

resource "azurerm_private_dns_zone_virtual_network_link" "db" {
  name                = "db-link-${lower(local.env_letter)}"
  private_dns_zone_id = azurerm_private_dns_zone.db.id
  virtual_network_id  = azurerm_virtual_network.main.id

  lifecycle {
    ignore_changes = [tags]
  }
}

# NAT Gateway for the Container App's outbound connectivity (IdG, Sentry, Google SSO)
resource "azurerm_nat_gateway" "main" {
  name                = "NAT-CDT-PUB-VIP-CALITP-${local.env_letter}"
  location            = data.azurerm_resource_group.main.location
  resource_group_name = data.azurerm_resource_group.main.name
  sku_name            = "Standard"

  lifecycle {
    ignore_changes = [tags]
  }
}

# Public IP for the NAT Gateway
resource "azurerm_public_ip" "nat" {
  name                = "PIP-CDT-PUB-VIP-CALITP-${local.env_letter}"
  location            = data.azurerm_resource_group.main.location
  resource_group_name = data.azurerm_resource_group.main.name
  allocation_method   = "Static"
  sku                 = "Standard"

  lifecycle {
    ignore_changes = [tags]
  }
}

# Associate public IP to NAT Gateway
resource "azurerm_nat_gateway_public_ip_association" "main" {
  nat_gateway_id       = azurerm_nat_gateway.main.id
  public_ip_address_id = azurerm_public_ip.nat.id
}

# Associate NAT Gateway with the APP Subnet
resource "azurerm_subnet_nat_gateway_association" "app" {
  subnet_id      = azurerm_subnet.main["APP"].id
  nat_gateway_id = azurerm_nat_gateway.main.id
}

# Associate NAT Gateway with the CA Subnet
resource "azurerm_subnet_nat_gateway_association" "ca" {
  subnet_id      = azurerm_subnet.main["CA"].id
  nat_gateway_id = azurerm_nat_gateway.main.id
}

# Network Security Group for the APP Subnet
resource "azurerm_network_security_group" "app" {
  name                = "NSG-CDT-PUB-VIP-CALITP-${local.env_letter}-APP"
  location            = data.azurerm_resource_group.main.location
  resource_group_name = data.azurerm_resource_group.main.name

  # Allow traffic out to the Internet
  # (Sentry, Google, IdG, Transit Processors, Eligibility Servers)
  security_rule {
    name                       = "AllowHTTPSOutbound"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "443"
    source_address_prefix      = "*"
    destination_address_prefix = "Internet"
    access                     = "Allow"
    priority                   = 100
    direction                  = "Outbound"
  }

  lifecycle {
    ignore_changes = [tags]
  }
}

resource "azurerm_subnet_network_security_group_association" "app" {
  subnet_id                 = azurerm_subnet.main["APP"].id
  network_security_group_id = azurerm_network_security_group.app.id
}

resource "azurerm_subnet_network_security_group_association" "ca" {
  subnet_id                 = azurerm_subnet.main["CA"].id
  network_security_group_id = azurerm_network_security_group.app.id
}

# Network Security Group for the DB Subnet
resource "azurerm_network_security_group" "db" {
  name                = "NSG-CDT-PUB-VIP-CALITP-${local.env_letter}-DB"
  location            = data.azurerm_resource_group.main.location
  resource_group_name = data.azurerm_resource_group.main.name

  # Allow traffic from the APP and CA subnets to the DB subnet on the PostgreSQL port
  security_rule {
    name                       = "AllowPostgresInboundFromApp"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "5432"
    source_address_prefix      = local.network_subnets["APP"].prefix[0]
    destination_address_prefix = "*"
    access                     = "Allow"
    priority                   = 100
    direction                  = "Inbound"
  }

  security_rule {
    name                       = "AllowPostgresInboundFromContainerApp"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "5432"
    source_address_prefix      = local.network_subnets["CA"].prefix[0]
    destination_address_prefix = "*"
    access                     = "Allow"
    priority                   = 105 # between existing rules
    direction                  = "Inbound"
  }

  security_rule {
    name                       = "DenyAllInbound"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "*"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
    access                     = "Deny"
    priority                   = 110
    direction                  = "Inbound"
  }

  lifecycle {
    ignore_changes = [tags]
  }
}

resource "azurerm_subnet_network_security_group_association" "db" {
  subnet_id                 = azurerm_subnet.main["DB"].id
  network_security_group_id = azurerm_network_security_group.db.id
}
